[gd_scene load_steps=10 format=2]

[ext_resource path="res://game/enemies/EnemyBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/enemies/EnemyBoss.gd" type="Script" id=2]
[ext_resource path="res://game/enemies/ShootPosition.gd" type="Script" id=3]
[ext_resource path="res://game/bullets/BulletEnemy.tscn" type="PackedScene" id=4]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.995516 )
colors = PoolColorArray( 1, 1, 1, 0.705882, 0, 0, 0, 0.188235 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, -0.836319, 0, 0, Vector2( 1, 0 ), -1.09339, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
resource_local_to_scene = true
flag_disable_z = true
direction = Vector3( 0, 100, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 400.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[node name="EnemyBoss" instance=ExtResource( 1 )]
script = ExtResource( 2 )
hitpoints = 1000.0
bullet = ExtResource( 4 )
bullet_speed = 380

[node name="Motor" parent="." index="7"]
process_material = SubResource( 5 )

[node name="ShootPositions1" type="Node2D" parent="." index="9"]

[node name="One" type="Position2D" parent="ShootPositions1" index="0"]
script = ExtResource( 3 )

[node name="ShootPositions2" type="Node2D" parent="." index="10"]

[node name="One" type="Position2D" parent="ShootPositions2" index="0"]
script = ExtResource( 3 )

[node name="GunTimer" type="Timer" parent="." index="11"]
wait_time = 1.4
one_shot = true

[node name="WaitTimer" type="Timer" parent="." index="12"]
wait_time = 2.5
one_shot = true
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]

[editable path="ExplosionFire2"]
